--- a/index.html
+++ b/index.html
@@ -2,139 +2,148 @@
 <html lang="nl">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Informaat</title>
     <link rel="stylesheet" href="styles/index.css">
     <script src="scripts/index.js" defer></script>
     <!--Gilroy font-->
-
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
 </head>
 <body>
 <div class="pageWrapper">
+
+
     <!--hero image-->
     <header class="hero">
         <img src="assets/Post%20PreviewTest.jpg" alt="hero image">
     </header>
     <main>
+
+
         <!--first block-->
-        <section class="howDoWeDo">
+        <div class="how-do-we-do">
             <img src="assets/Rectangle%2098.jpg" alt="hoe doen we dat">
-            <div class="howWeDoTextContainer">
+            <section class="how-we-do-text-container">
                 <h2>Hoe doen we dat?</h2>
                 <ul>
-                    <li class="listItems">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
-                    <li class="listItems">En kansen te benutten op basis van waarden- en datagedreven aanpak.</li>
-                    <li class="listItems">Met creatieve en analytische ontwerpers die de mens centraal stellen.</li>
-                    <li class="listItems">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
-                    <li class="listItems">In nauwe samenwerking met jouw team.</li>
+                    <li class="list-items">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
+                    <li class="list-items">En kansen te benutten op basis van waarden- en datagedreven aanpak.</li>
+                    <li class="list-items">Met creatieve en analytische ontwerpers die de mens centraal stellen.</li>
+                    <li class="list-items">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
+                    <li class="list-items">In nauwe samenwerking met jouw team.</li>
                 </ul>
                 <button>Neem contact met ons op</button>
-            </div>
-            <div class="howDoWeDoEmpty"></div>
-        </section>
+            </section>
+            <div class="how-do-de-do-empty"></div>
+        </div>
+
+
         <!--second block-->
-        <section class="customerReviews">
-            <div class="customerReviewsContentContainer">
+        <div class="customer-reviews">
+            <section class="customer-reviews-content-container">
                 <h2>Wat vinden onze klanten</h2>
                 <p>“Ik ben niet alleen onder de indruk van het resultaat uit deze samenwerking, maar ook hoe Informaat
                     gezorgd heeft dat onze medewerkers een nieuwe, klantgerichte denkwijze eifen hebben gemaakt. Dit is
                     blijvend van waarde voor de organisatie</p>
                 <!--moeten later meerdere images in vandaar div-->
-                <div class="customerReviewsImageContainer">
+                <div class="customer-reviews-image-container">
                     <img src="assets/logosInformaat.png" alt="bedrijfs logos">
                 </div>
-            </div>
-        </section>
+            </section>
+        </div>
+
 
         <!--third block-->
-        <div class="askUs">
-            <div class="askUsImgContainer">
+        <div class="ask-us">
+            <div class="ask-us-img-container">
                 <img src="assets/Illustratie%2001%20-%20Blauw.svg" alt="Vraag">
             </div>
 
-            <section class="askUsTextContainer">
-
+            <section class="ask-us-text-container">
                 <h2>Hoe doen we dat?</h2>
                 <p>Voorbeelden van vragen waar we in 2022 mee aan de slag gegaan zijn: hoe kunnen we...</p>
                 <ul>
-                    <li class="listItems">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
-                    <li class="listItems">En kansen te benutten op basis van waarden- en datagedreven aanpak.</li>
-                    <li class="listItems">Met creatieve en analytische ontwerpers die de mens centraal stellen.</li>
-                    <li class="listItems">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
-                    <li class="listItems">In nauwe samenwerking met jouw team.</li>
+                    <li class="list-items">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
+                    <li class="list-items">En kansen te benutten op basis van waarden- en datagedreven aanpak.</li>
+                    <li class="list-items">Met creatieve en analytische ontwerpers die de mens centraal stellen.</li>
+                    <li class="list-items">Door snel ideeën te visualiseren en toetsen in de praktijk.</li>
+                    <li class="list-items">In nauwe samenwerking met jouw team.</li>
                 </ul>
             </section>
-
-
         </div>
 
+
         <!--fourth block-->
-        <section class="whatDoYouGet">
+        <div class="what-do-you-get">
             <img src="assets/Rectangle%20104.jpg" alt="hoe doen we dat">
-            <div class="whatDoYouGetTextContainer">
+            <section class="what-do-you-get-text-container">
                 <h2>Wat je van ons krijgt?</h2>
                 <ul>
-                    <li class="listItems">Scherp beeld van je klant, hun waarden, behoefte en gedrag.</li>
-                    <li class="listItems">Kansrijke en visueel uitgewerkte waardeproposities die inspelen op de
+                    <li class="list-items">Scherp beeld van je klant, hun waarden, behoefte en gedrag.</li>
+                    <li class="list-items">Kansrijke en visueel uitgewerkte waardeproposities die inspelen op de
                         klantbehoeften van
                         overmorgen.
                     </li>
-                    <li class="listItems">Gevalideerd en passend bij je klant en je strategie.</li>
-                    <li class="listItems">Focus voor de lange termijn, concrete verbeterideeën voor de korte termijn.
+                    <li class="list-items">Gevalideerd en passend bij je klant en je strategie.</li>
+                    <li class="list-items">Focus voor de lange termijn, concrete verbeterideeën voor de korte termijn.
                     </li>
-                    <li class="listItems">Een goede Inkijk in hoee wij dat doen, zodat je eigen team het straks ook
+                    <li class="list-items">Een goede Inkijk in hoee wij dat doen, zodat je eigen team het straks ook
                         kan.
                     </li>
-                    <li class="listItems">Roadmap voor doorontwikkeling</li>
+                    <li class="list-items">Roadmap voor doorontwikkeling</li>
                 </ul>
-            </div>
-            <div class="howDoWeDoEmpty"></div>
-        </section>
+            </section>
+            <div class="how-do-de-do-empty"></div>
+        </div>
+
+
         <!--fifth block-->
-        <section class="ourApproach">
+        <section class="our-approach">
             <h2>Onze aanpak?</h2>
             <div class="list">
-                <div class="ourApproachContentBlocks">
+                <section class="our-approach-content-blocks">
                     <h3>Waardengedreven</h3>
                     <img src="https://daan645.github.io/the-startup-responsive-interactieve-website/assets/Aanpak%20images.svg"
                          alt="Waardengedreven">
                     <p class="">We achterhalen wat je klanten en organisatie écht belangrijk vinden. Dit vertalen we
                         door in
                         proposities</p>
-                </div>
-                <div class="ourApproachContentBlocks">
+                </section>
+
+                <section class="our-approach-content-blocks">
                     <h3 class="">Waardengedreven</h3>
                     <img src="https://daan645.github.io/the-startup-responsive-interactieve-website/assets/Aanpak%20images-1.svg"
                          alt="Datagedreven" class="">
                     <p class="">We bedenken oplossingen die slim en etisch gebruik maken van data.</p>
-                </div>
-                <div class="ourApproachContentBlocks">
+                </section>
+
+                <section class="our-approach-content-blocks">
                     <h3>Positieve impact</h3>
                     <img src="https://daan645.github.io/the-startup-responsive-interactieve-website/assets/Aanpak%20images-2.svg"
                          alt="" class="">
                     <p class="">We dagen je team continu uit de beste keuzes te maken, voor je klanten, voor je bedrijf
                         en voor de
                         wereld.</p>
-                </div>
+                </section>
             </div>
-
         </section>
+
+
         <!--block six-->
-        <section class="exampleProject">
-            <section class="sliderTitleContainer">
-                <section class="sliderTitle">
+        <div class="example-project">
+
+            <div class="slider-title-container">
+                <section class="slider-title">
                     <p>Voorbeeld project / van meeuwen</p>
                     <h2>Slimmer smeertechnisch<br> onderhoud.</h2>
                 </section>
-                <img class="vanMeeuwenImg" src="assets/logoVanMeeuwen.png" alt="van Meeuwen logo">
-            </section>
+                <img class="van-meeuwen-img" src="assets/logoVanMeeuwen.png" alt="van Meeuwen logo">
+            </div>
 
-            <section class="exampleProjectImgContainer">
+            <div class="example-project-img-container">
                 <img src="assets/Rectangle%20105-1.jpg" alt="Slide 2">
                 <img id="bigImg" src="assets/Rectangle%20105.jpg" alt="Slide 1">
                 <img src="assets/Rectangle%20133.jpg" alt="Slide 3">
-            </section>
+            </div>
 
             <div class="slider-container">
                 <div class="slider">
@@ -148,12 +157,13 @@
                         <img src="assets/Rectangle%20133.jpg" alt="Slide 3">
                     </div>
                 </div>
-                <button class="prev" onclick="changeSlide(-1)"><img class="sliderArrows" src="assets/arrowLeftWhite.png"
+                <button class="prev" onclick="changeSlide(-1)"><img class="slider-arrows" src="assets/arrowLeftWhite.png"
                                                                     alt="Arrow Left"></button>
-                <button class="next" onclick="changeSlide(1)"><img class="sliderArrows" src="assets/arrowWhiteRight.png"
+                <button class="next" onclick="changeSlide(1)"><img class="slider-arrows" src="assets/arrowWhiteRight.png"
                                                                    alt="Arrow Right"></button>
             </div>
-            <section class="exampleProjectText">
+
+            <div class="example-project-text">
                 <article>
                     <h2>Uitdaging</h2>
                     <p>Hoe verander je de mindset van onderhoudsmanagers zodat ze onderhoudsdata van hun machinepark
@@ -171,38 +181,41 @@
                 <article>
                     <h2>Wat je van ons krijgt?</h2>
                     <ul>
-                        <li class="listItems">Twee gevalideerde proposities voor digitaal smeerbeheer. ‘Slimmer smeren’,
+                        <li class="list-items">Twee gevalideerde proposities voor digitaal smeerbeheer. ‘Slimmer smeren’,
                             met een Slimmer
                             Smeren platform en software tool.
                         </li>
-                        <li class="listItems">Hiemee kunnen onderhoudsteams eerder de juiste onderhoudsacties
+                        <li class="list-items">Hiemee kunnen onderhoudsteams eerder de juiste onderhoudsacties
                             uitvoeren.
                         </li>
-                        <li class="listItems">Van Meeuwen heeft zich een nieuwe werkwijze eigen gemaakt: veel meer
+                        <li class="list-items">Van Meeuwen heeft zich een nieuwe werkwijze eigen gemaakt: veel meer
                             klantgericht ontwerpen,
                             experimenteren en valideren.
                         </li>
                     </ul>
                 </article>
-            </section>
-        </section>
+            </div>
+        </div>
+
+
         <!--block seven-->
-        <div class="howWeStartContainer">
-            <section class="howWeStart">
+        <div class="how-we-start-container">
+            <div class="how-we-start">
                 <!--progressbar-->
-                <div class="progressBar">
+                <div class="progress-bar">
                     <button id="progressBar1">1</button>
                     <hr id="line1" class="line">
                     <button id="progressBar2">2</button>
                     <hr id="line2" class="line">
                     <button id="progressBar3">3</button>
                 </div>
-                <section class="progressBarBlocks">
+
+                <div class="progress-bar-blocks">
                     <figure>
-                        <div class="progressBarContentBlock">
-                            <img class="howWeStartImg" src="assets/Frame%20218.svg" alt="Verbeteren">
+                        <div class="progress-bar-content-block">
+                            <img class="how-we-start-img" src="assets/Frame%20218.svg" alt="Verbeteren">
                             <p>Bestaande dienst aanscherpen voor bestaande markt</p>
-                            <button>Volgende<img class="progressBarButtonImg" src="assets/arrowRightBlack.png"
+                            <button>Volgende<img class="progress-bar-button-img" src="assets/arrowRightBlack.png"
                                                  alt="Pijl naar rechts"></button>
                         </div>
                     </figure>
@@ -220,28 +233,32 @@
                     <!--                        <button>Volgende<img class="progressBarButtonImg" src="assets/arrowRightBlack.png" alt="Pijl naar rechts"></button>-->
                     <!--                    </div>-->
                     <!--                </figure>-->
-                </section>
-                <section class="howWeStartImgContainer">
+                </div>
+
+                <div class="how-we-start-img-container">
                     <figure>
-                        <div class="howeStartContentBlock">
-                            <img class="howWeStartImg" src="assets/Frame%20218.svg">
+                        <div class="how-we-start-content-block">
+                            <img class="how-we-start-img" src="assets/Frame%20218.svg">
                             <p>Bestaande dienst aanscherpen voor bestaande markt</p>
                         </div>
                     </figure>
+
                     <figure>
-                        <div class="howeStartContentBlock">
-                            <img class="howWeStartImg" src="assets/Frame%20218.svg">
+                        <div class="how-we-start-content-block">
+                            <img class="how-we-start-img" src="assets/Frame%20218.svg">
                             <p>Bestaande dienst aanscherpen voor bestaande markt</p>
                         </div>
                     </figure>
+
                     <figure>
-                        <div class="howeStartContentBlock">
-                            <img class="howWeStartImg" src="assets/Frame%20218.svg">
+                        <div class="how-we-start-content-block">
+                            <img class="how-we-start-img" src="assets/Frame%20218.svg">
                             <p>Bestaande dienst aanscherpen voor bestaande markt</p>
                         </div>
                     </figure>
-                </section>
-                <article class="howWeStartText">
+                </div>
+
+                <article class="how-we-start-text">
                     <h3>Scope op diepgang</h3>
                     <p>Vervolgens bepalen we samen de scope en diepgang voor elke fase van het ontwerp proces. We
                         stellen een plan van aanpak op en maken een offerte. Alles helder en akkoord? Let’s hit the
@@ -254,11 +271,15 @@
                         <li>12 weken € 145.000,-</li>
                     </ul>
                 </article>
-            </section>
+            </div>
         </div>
+
+
         <!--blok seven-->
-        <section class="talkAndContactContainer">
-            <section class="talk">
+
+
+        
+            <div class="talk">
                 <h2>Verder praten?</h2>
                 <img src="assets/image%2051.jpg" alt="Susanne van Mulken">
                 <h3>Suzanne van Mulken</h3>
@@ -267,16 +288,19 @@
                     <li>+31 6 621392</li>
                     <li>Susannevanmulken@informaat.nl</li>
                 </ul>
-                <div class="talkLinkedin"><a
+                <div class="talk-linkedin"><a
                         href="https://www.linkedin.com/in/susannevanmulken/?originalSubdomain=nl"><img
                         src="assets/black-linkedin-logo.png" id="linkedin" alt="Linkedin logo">Susannevanmulken</a>
                 </div>
-            </section>
+            </div>
+
+
             <!--block eight-->
             <section class="contact">
                 <h2>Samenwerken?</h2>
                 <p>Wij werken graag samen om jouw business waardevol, authentiek en geloofwaardig te maken voor je
                     klanten van overmorgen. Stuur ons een bericht en we nemen contact met je op...</p>
+
                 <form>
                     <!--name-->
                     <input type="text" id="name" name="name" placeholder="Naam" required>
@@ -293,8 +317,10 @@
                     <button type="submit">Verzenden</button>
                 </form>
             </section>
-        </section>
+        </div>
     </main>
+
+
     <!--footer-->
     <footer>
 
