van meeuwen image

--- a/index.html
+++ b/index.html
@@ -131,13 +131,14 @@
         <!--block six-->
         <div class="example-project">
 
-            <div class="slider-title-container">
-                <section class="slider-title">
-                    <p>Voorbeeld project / van meeuwen</p>
-                    <h2>Slimmer smeertechnisch<br> onderhoud.</h2>
-                </section>
-                <img class="van-meeuwen-img" src="assets/logoVanMeeuwen.png" alt="van Meeuwen logo">
-            </div>
+
+                <div class="slider-title">
+                    <section class="title-container">
+                    <h2>Voorbeeld project / van meeuwen</h2>
+                    <p>Slimmer smeertechnisch<br> onderhoud.</p>
+                    </section>
+                    <img class="van-meeuwen-img" src="assets/logoVanMeeuwen.png" alt="van Meeuwen logo">
+                </div>
 
             <div class="example-project-img-container">
                 <img src="assets/Rectangle%20105-1.jpg" alt="Slide 2">
